Minor improvments